<resources>
    <string name="app_name">CBT Oganisation</string>
    <string name="title_activity_create_new_task">"Create New Task "</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="TaskNameInputHint">Task Name</string>
    <string name="TaskLocationInputHint">Location</string>
    <string name="TaskStartDateInputHint">Start Date</string>
    <string name="TaskEndDateInputHint">End Date</string>
    <string name="TaskStartTimeInputHint">Start Time</string>
    <string name="TaskEndTimeInputHint">End Time</string>
    <string name="TaskDescriptionInputHint">Task Description</string>
    <string name="SaveTaskButtonText">Save Task</string>
    <string name="CreateNewTaskButtonText">Create New Task</string>
    <string name="no_tasks_layout_text">No Tasks Today</string>
    <string name="checkboxTaskCompletedText">Completed</string>


    <string name="MonthCalendarDayMon">Mon</string>
    <string name="MonthCalendarDayTue">Tue</string>
    <string name="MonthCalendarDayWed">Wed</string>
    <string name="MonthCalendarDayThurs">Thu</string>
    <string name="MonthCalendarDayFri">Fri</string>
    <string name="MonthCalendarDaySat">Sat</string>
    <string name="MonthCalendarDaysun">Sun</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="home_string_for_nav_drawer">Home</string>
    <string name="month_calendar_page">Month</string>
    <string name="NavDrawerTextLocations">Locations</string>
    <string name="monthviewpager">Month View Pager</string>

    <string name="TasksByLocationTitle">Tasks By Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewtaskmenuedit">Edit</string>


</resources>
