<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tasks.presentation.edittasks.EditTaskFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_background"
        android:elevation="@dimen/dialog_elevation">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/viewTasksByIDToolbar"
                style="@style/DarkToolBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/app_bar__elevation"
                android:theme="@style/DarkToolBarStyle"
                app:menu="@menu/save_task_menu"
                android:textAlignment="center">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryDark"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TitleTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="77dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="77dp"
                android:alpha="1.0"
                android:hint="@string/TaskNameInputHint"
                android:textColorHint="?attr/colorOnPrimary"
                app:endIconMode="clear_text"
                app:hintTextColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TitleTextView"
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    android:alpha="1.0"
                    android:elevation="26dp"
                    android:gravity="start|bottom"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/TaskLocationInputHint"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/TitleTextViewLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationTextView"
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    android:elevation="26dp"
                    android:gravity="start|bottom"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Location" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startDateTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/TaskStartDateInputHint"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/locationTextViewLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startDateTextView"
                    android:layout_width="128dp"
                    android:layout_height="56dp"
                    android:elevation="26dp"
                    android:gravity="start|bottom"
                    android:inputType="date"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    tools:text="Start Date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTimeTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/TaskEndDateInputHint"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/locationTextViewLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startTimeTextView"
                    android:layout_width="128dp"
                    android:layout_height="56dp"
                    android:elevation="26dp"
                    android:gravity="start|bottom"
                    android:inputType="time"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Start Time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endDateTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/TaskEndDateInputHint"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/startDateTextViewLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endDateTextView"
                    android:layout_width="128dp"
                    android:layout_height="56dp"
                    android:elevation="26dp"
                    android:gravity="start|bottom"
                    android:inputType="date"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="End Date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTimeTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/TaskEndTimeInputHint"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/startTimeTextViewLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endTimeTextView"
                    android:layout_width="128dp"
                    android:layout_height="56dp"
                    android:elevation="26dp"
                    android:gravity="start|bottom"
                    android:inputType="time"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="End Time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="77dp"
                android:layout_marginTop="248dp"
                android:layout_marginEnd="77dp"
                android:elevation="26dp"
                android:hint="@string/TaskDescriptionInputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleTextViewLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTextView"
                    android:layout_width="280dp"
                    android:layout_height="200dp"
                    android:gravity="start|top"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="205dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="64dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                app:layout_constraintGuide_end="64dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>